; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_ipa-prop.c_ipa_methodlist_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_ipa-prop.c_ipa_methodlist_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cgraph_node = type { %struct.cgraph_node* }

@cgraph_nodes = common dso_local global %struct.cgraph_node* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ipa_methodlist_init() #0 {
  %1 = alloca %struct.cgraph_node*, align 8
  %2 = alloca i32*, align 8
  store i32* null, i32** %2, align 8
  %3 = load %struct.cgraph_node*, %struct.cgraph_node** @cgraph_nodes, align 8
  store %struct.cgraph_node* %3, %struct.cgraph_node** %1, align 8
  br label %4

4:                                                ; preds = %10, %0
  %5 = load %struct.cgraph_node*, %struct.cgraph_node** %1, align 8
  %6 = icmp ne %struct.cgraph_node* %5, null
  br i1 %6, label %7, label %14

7:                                                ; preds = %4
  %8 = load %struct.cgraph_node*, %struct.cgraph_node** %1, align 8
  %9 = call i32 @ipa_add_method(i32** %2, %struct.cgraph_node* %8)
  br label %10

10:                                               ; preds = %7
  %11 = load %struct.cgraph_node*, %struct.cgraph_node** %1, align 8
  %12 = getelementptr inbounds %struct.cgraph_node, %struct.cgraph_node* %11, i32 0, i32 0
  %13 = load %struct.cgraph_node*, %struct.cgraph_node** %12, align 8
  store %struct.cgraph_node* %13, %struct.cgraph_node** %1, align 8
  br label %4

14:                                               ; preds = %4
  %15 = load i32*, i32** %2, align 8
  ret i32* %15
}

declare dso_local i32 @ipa_add_method(i32**, %struct.cgraph_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
